WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
310332
genericParseNumber returns false instead of std::nullopt for exponent overflow
https://bugs.webkit.org/show_bug.cgi?id=310332
Summary
genericParseNumber returns false instead of std::nullopt for exponent overflow
Ahmad Saleem
Reported
2026-03-20 00:57:27 PDT
ssia - it make use align with other browser.
Attachments
Add attachment
proposed patch, testcase, etc.
Radar WebKit Bug Importer
Comment 1
2026-03-20 00:57:34 PDT
<
rdar://problem/172984199
>
Ahmad Saleem
Comment 2
2026-03-20 00:59:03 PDT
Pull request:
https://github.com/WebKit/WebKit/pull/60985
EWS
Comment 3
2026-03-20 03:13:28 PDT
Committed
309608@main
(ff16207ecb69): <
https://commits.webkit.org/309608@main
> Reviewed commits have been landed. Closing PR #60985 and removing active labels.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug