genericParseNumber returns false instead of std::nullopt for exponent overflow https://bugs.webkit.org/show_bug.cgi?id=310332 rdar://172984199

Reviewed by Rob Buis.

genericParseNumber incorrectly returned `false` instead of `std::nullopt`
when the parsed exponent exceeded the representable float range. Since the
return type is std::optional<FloatType>, `false` implicitly constructs a
successful result of 0 rather than signaling a parse failure.

This caused paths like "M0,50 h1e39" to silently produce "h0" instead of
being treated as malformed.

Also converts svg/dom/path-parser.html to testharness.js and adds
additional test coverage for repeated commands, trailing content after
close, and incomplete command sequences based on Blink's test suite
(svg_path_parser_test.cc).

* LayoutTests/platform/mac/svg/dom/path-parser-expected.png: Removed.
* LayoutTests/svg/dom/path-parser-expected.txt:
* LayoutTests/svg/dom/path-parser.html:
* Source/WebCore/svg/SVGParserUtilities.cpp:
(WebCore::genericParseNumber):

Canonical link: https://commits.webkit.org/309608@main